@@ -132,7 +132,7 @@ abstract class SimpleRetryPolicy[A](i: Int) extends RetryPolicy[A]
 object RetryPolicy extends JavaSingleton {
   object RetryableWriteException {
     def unapply(thr: Throwable): Option[Throwable] = thr match {
-      case exc@Failure.Retryable(_) => Some(exc)
+      case exc@Failure.Rejected(_) => Some(exc)
       // We don't retry interruptions by default since they
       // indicate that the request was discarded.
       case Failure.InterruptedBy(_) => None
