@@ -38,7 +38,7 @@ class RetryPolicyTest extends FunSpec {
       assert(weo(Throw(new Exception)) === false)
       assert(weo(Throw(WriteException(new Exception))) === true)
       assert(weo(Throw(Failure.InterruptedBy(new Exception))) === false)
-      assert(weo(Throw(Failure.InterruptedBy(new Exception).withRetryable(true))) === true)
+      assert(weo(Throw(Failure.Rejected(new Exception))) === true)
       assert(weo(Throw(timeoutExc)) === false)
     }
 
